css/article.css
HTML {
  margin: 0;
}

BODY {
  display: flex;
  margin: 0;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  font-family: Roboto, Segoe UI, Tahoma, sans-serif;
  font-size: 13px;
  position: absolute;
  user-select: none;
}

#background {
  /* background is in its own div so text copied to clipboard don't pick up a background color */
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgb(169, 169, 169);
}

#document-area {
  position: relative;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: auto;
  min-width: 0;
}

#article-container {
  position: relative;
  /* using text-align to center #article since we want its left margin to be respected */
  text-align: center;
  height: 100%;
  overflow: auto;
}

#article {
  display: inline-block;
  position: relative;
  margin: 5mm 5mm 5mm 5mm;
  text-align: start;
  z-index: 2;
}

#article-content {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 25mm calc(25mm - 1px) 25mm 25mm;
}

#article-text {
  font-size: 12pt;
  text-align: justify;
  white-space: pre-wrap;
}

#article-text.Arab {
  direction: rtl;
}

#article-text.Arab :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Armn {
}

#article-text.Armn :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Beng {
}

#article-text.Beng :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Cyrl {
}

#article-text.Cyrl :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Deva {
}

#article-text.Deva :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Ethi {
}

#article-text.Ethi :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Geor {
}

#article-text.Geor :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Grek {
}

#article-text.Grek :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Gujr {
}

#article-text.Gujr :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Guru {
}

#article-text.Guru :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Hang {
}

#article-text.Hang :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Hans {
}

#article-text.Hans :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Hant {
}

#article-text.Hant :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Hebr {
  direction: rtl;
}

#article-text.Hebr :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Jpan {
}

#article-text.Jpan :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Khmr {
}

#article-text.Khmr :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Knda {
}

#article-text.Knda :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Laoo {
}

#article-text.Laoo :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Latn {
}

#article-text.Latn :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Mlym {
}

#article-text.Mlym :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Mymr {
}

#article-text.Mymr :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Orya {
}

#article-text.Orya :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Sinh {
}

#article-text.Sinh :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Taml {
}

#article-text.Taml :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Telu {
}

#article-text.Telu :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text.Thai {
}

#article-text.Thai :is(H1, H2, H3, H4, H5, H6) {
  text-align: start;
}

#article-text TABLE {
  border-collapse: collapse;
  text-align: start;
  font-size: 80%;
}

#article-text TD,
#article-text TH {
  border: 1px solid rgb(0, 0, 0);
  padding: 1px 2px 0 2px;
}

#article-text TABLE.decomposed {
  display: block;
  width: fit-content;
  border-collapse: collapse;
  max-width: calc(100% - 1px);
  margin-left: auto;
  margin-right: auto;
}

#article-text TABLE.decomposed TBODY,
#article-text TABLE.decomposed THEAD,
#article-text TABLE.decomposed TFOOT {
  display: block;
  width: fit-content;
  max-width: 100%;
}

#article-text TABLE.decomposed TR {
  display: flex;
  flex-direction: row;
  margin-bottom: -1px;
  min-width: 10px;
  max-width: 100%;
}

#article-text TABLE.decomposed TD,
#article-text TABLE.decomposed TH {
  flex: 0 0 auto;
  box-sizing: border-box;
  margin-left: -1px;
}

#article-text TABLE.decomposed CAPTION {
  display: flex;
  width: 100%;
  justify-content: center;
}

#article-text:focus {
  outline: none;
}

#article-text *:first-child {
  margin-top: 0;
}

#article-text.rtl {
  direction: rtl;
}

#article.filter-automatic #article-text .likely-junk {
  display: none;
}

#article.filter-manual #article-text .likely-junk {
  background-color: rgba(255, 102, 102, 0.9);
}

#article.filter-manual #article-text .possibly-junk {
  animation-name: flashing-background;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-delay: 1s;
}

@keyframes flashing-background {
  0%   { background-color: rgba(255, 255, 102, 0); }
  10%  { background-color: rgba(255, 255, 102, 0.8); }
  40%  { background-color: rgba(255, 255, 102, 0.8); }
  80%  { background-color: rgba(255, 255, 102, 0); }
  100% { background-color: rgba(255, 255, 102, 0); }
}

#article.filter-manual #article-text * {
  cursor: pointer;
}

#article.filter-manual #article-footers {
  opacity: 0.25;
}

#article-footers {
  font-size: 10pt;
}

#article-menu {
  position: absolute;
  background-color: #eeeeee;
  border-radius: 4px;
  box-shadow: 1px 1px 5px black;
  padding: 2px 2px 2px 2px;
  white-space: nowrap;
}

#menu-annotate {
  font-size: 1.4em;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#menu-annotate LI {
  padding: 0.2em 0.4em 0.2em 0.4em;
  cursor: pointer;
}
/* ... */

